# agentic-job-assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
backend/: __init__.py  __main__.py  agent.py  app.py  artifacts.py  browser.py  config.py  logger.py  resume.py  skills.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  MarkdownContent.jsx  MarkdownContent.test.jsx  sse.js  sse.test.js  styles.css
skills/: application-writing.md  follow-up.md  job-match.md
tests/: test_agent.py  test_app.py  test_artifacts.py  test_resume.py  test_skills.py
