[project]
name = "agentic-job-assistant"
version = "1.0.0"
description = "A local job application chatbot with skills, tools, specialists, streaming, and read-only browser access."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1",
  "openai-agents>=0.2.0,<1",
  "pypdf>=5.8.0,<7",
  "python-docx>=1.2.0,<2",
  "python-dotenv>=1.1.0,<2",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.35.0,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1",
  "pytest>=8.4.0,<10",
  "pytest-asyncio>=1.1.0,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
